# hotel

./: .gitignore  Dockerfile  Dockerfile.nginx  alembic.ini  docker-compose.yaml  hotels.csv  init-db.sh  pyproject.toml  raise  requirements.txt  return  room.csv
.github/workflows/: config.yml
app/: config.py  database.py  exceptions.py  logger.py  main.py  tenders.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  dependencies.py  enums.py  messages.py  models.py  router.py  schemas.py  service.py
app/csv_files/: dao.py  dependencies.py  router.py  service.py
app/dao/: base.py  exception_handlers.py
app/favorite_hotels/: dao.py  models.py  router.py  service.py
app/hotels/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/hotels/rooms/: models.py  schemas.py
app/ideas_for_later/: booking_confirmation_cache.py  old_email_templates.py  row_sql.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 1225fa4849e2_added_new_table_favoritehotels.py  2024-08-27_added_new_column_password_changed_at_to_.py  2024-08-30_default_value_for_bookings_status_is_.py  (+11 more)
app/tasks/: celery.py  dao.py  email_templates.py  scheduled.py  tasks.py
app/tests/: conftest.py  mock_booking_confirmations.json  mock_hotels.json
app/users/: auth.py  dao.py  dependencies.py  enums.py  models.py  router.py  schemas.py  service.py
app/utils/: exception_handlers.py
docker/: app.sh  celery.sh
useful_stuff/: hotel.csv  nginx.conf  rooms.csv  test_data_db.sql
useful_stuff/ideas_for_later/: celery_pic_task.py  row_sql.py
(+12 files in other folders)
